objects/CMPL123CME__MedDRA_SOC_and_Group_Term__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Status of SOC and Group Term</description>
        <inlineHelpText>Active Status of SOC and Group Term</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>8-digit code to identify the High Level Group Term</description>
        <inlineHelpText>8-digit code to identify the High Level Group Term</inlineHelpText>
        <label>HLGT Code</label>
        <referenceTo>CMPL123CME__MedDRA_High_Level_Group_Term__c</referenceTo>
        <relationshipLabel>MedDRA SOC and Group Term</relationshipLabel>
        <relationshipName>MedDRA_SOC_and_Group_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>8-digit code to identify the System Organ Class</description>
        <inlineHelpText>8-digit code to identify the System Organ Class</inlineHelpText>
        <label>SOC Code</label>
        <referenceTo>CMPL123CME__MedDRA_System_Organ_Class__c</referenceTo>
        <relationshipLabel>MedDRA SOC and Group Term</relationshipLabel>
        <relationshipName>MedDRA_SOC_and_Group_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_group_unique_key__c</fullName>
        <externalId>true</externalId>
        <label>SOC and Group Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MedDRA SOC and Group Term</label>
    <nameField>
        <label>MedDRA SOC and Group Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedDRA SOC and Group Term</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CMPL123CME__HLGT_Code_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__hlgt_code__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__hlgt_code__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__SOC_Code_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__soc_code__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__soc_code__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
</CustomObject>